# Format-otr

./: README.md  pyproject.toml
.github/workflows/: CI.yml
src/: cli.py
src/format_otr/: export_otr.py  export_txt.py  format_otr.py  summary_otr.py  utils.py
tests/: test_export_txt.py  test_format_otr.py
tests/export_otr/: test_export_otr.py
tests/export_otr/data/: expected_txt.txt
tests/format_otr/: test_format_otr.py
tests/format_otr/data/: expected_otr.otr
tests/summary_otr/: test_summary_otr.py
