[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "format-otr"
version = "0.0.1"
authors = [
  { name="Sonam Phuntsog", email="spsither@gmail.com" },
]
description = "Package to format and export otr files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bs4"
]

[project.scripts]
export-txt = "format_otr.export_otr:main_cli"
format-otr = "format_otr.format_otr:main_cli"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
